# ev_charging

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  app_pipeline_test.ipynb  caiso.ipynb  data_load.ipynb  deploy.sh  docker-compose.yml  env_setup.sh  model.pkl  model_04_10.pkl  pyproject.toml  reg_model.pkl  setting-up-ec2.md  test_X.csv  test_demand.csv  test_future_weather.csv
.github/workflows/: aws.yml
application/: app.py
archive/: data_load.ipynb  data_loader.py  env_setup.sh
data/: caiso.ipynb  caltech_historical_weather.csv  future_weather.ipynb  historical_weather_meteo.ipynb  instructions.txt  jpl_sr_ss.csv  meteo_weather.ipynb  of_sr_ss.csv  office_historical_weather.csv  test_forecast.csv  unzip_script.sh  watttime_test.ipynb  weather.ipynb
eda/: api_scrape.ipynb  ct_sr_ss.csv  data_preprocessing.ipynb  eda varun.ipynb  eda.ipynb  eda_starter.ipynb
model_notebooks/: XGB_all_sites.ipynb  log_reg.ipynb  model_eval.ipynb  model_workbook.ipynb
models/: LSTM_XGB.ipynb  XGB.ipynb  XGB_all_sites.ipynb  log_reg.ipynb  model_04_10.pkl  model_eval.ipynb  model_workbook.ipynb  multinomial_reg.ipynb  nn.ipynb  simulator.ipynb  transformer 2.ipynb  transformer.ipynb  transformer_model.ipynb
nginx/: Dockerfile  project.conf
src/: data_preprocessing.py  oasis.py  test_data_preprocessing.ipynb  weather.py
src/application/: app.py
test/: app_pipeline_test.ipynb  test_X.csv  test_demand.csv  test_future_weather.csv  test_recommendation.csv  test_time.csv
