[tool.poetry]
name = "charge-buddy"
version = "0.1.0"
description = "This is the package configuration file for the application Charge Buddy"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xgboost = "2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
