[tool.poetry]
name = "charge-buddy"
version = "0.1.0"
description = "This is the package configuration file for the application Charge Buddy"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
xgboost = "2.0.3"
streamlit = "^1.33.0"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
